# gitctx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
src/gitctx/: __init__.py  cli.py  gitutils.py  profiles.py  rules.py
tests/: test_cli.py  test_gitutils.py  test_profiles.py  test_rules.py
