[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitctx"
version = "0.1.0"
description = "Switch Git user configs per directory — work email here, personal email there."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Jonathan La Porte" }]
keywords = ["git", "config", "context", "switch", "profile", "identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["rich>=13.0", "tomli>=2.0; python_version < '3.11'", "tomli-w>=1.0"]

[project.scripts]
gitctx = "gitctx.cli:cli_entry"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/jlaportebot/gitctx"
Repository = "https://github.com/jlaportebot/gitctx"
Issues = "https://github.com/jlaportebot/gitctx/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",
    "N806",
    "N803",
    "UP045",  # Use `X | None` for type annotations (not compatible with py39)
    "UP035",  # typing.Dict deprecated (need typing.Dict for py39)
    "UP006",  # Use `dict` instead of `Dict` (need Dict for py39)
    "UP007",  # Use `X | Y` for type annotations (not compatible with py39)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"